2003-04-21  Matthias Clasen  <maclas@gmx.de>

	* tools/docpercentages.pl: Fix autolinkification for undocumented
	symbols.  

	* doc/style-guide.txt: Typo fix.

2003-04-18  James Henstridge  <james@daa.com.au>

	* NEWS: add news items.

	* configure.in: increment version number.

2003-03-14  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (OutputBook): Fix the public identifier for
	DocBook V3.0: Davenport, not DavenPort.  
	(#108343, Mariano Suarez-Alvarez) 

2003-03-10  James Henstridge  <james@daa.com.au>

	* configure.in: associate the chmod commands with the files they
	are chmod'ing.  This way config.status will always run the correct
	chmod command.

2003-03-04  James Henstridge  <james@daa.com.au>

	* configure.in: look up the docbook DTD by public id rather than
	system id.

2003-02-26  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (GetArgs): Prefer template or comment docs over
	blurbs only if they're nonempty, otherwise the empty docs from the
	templates override all the blurbs.

2003-02-26  James Henstridge  <james@daa.com.au>

	* autogen.sh (THEDIR): set up so that it will choose automake 1.7
	or 1.6 in preference to 1.4.  Passes distcheck okay.

	* configure.in: update configure.in script to match
	recommendations of newer autoconf's, and add an AC_PREREQ()
	statement, since the xml catalog checks are using new autoconf
	features.

	* gtk-doc.make (xml-build.stamp): since other bits of the makefile
	were assuming xml, may as well hard code --output-format=xml.

2003-02-19  James Henstridge  <james@daa.com.au>

	* Makefile.am: get rid of the dist-hook, and just include the
	given files in EXTRA_DIST instead.

	* configure.in: provide meaningful names for the commands.

	* acinclude.m4 (JH_CHECK_XML_CATALOG): add some extra arguments: a
	friendly name for the catalog entry, and actions to run if the
	entry was found or not.  Also include a bit more information in
	the config.log file if an error occurs.
