@@ -1,3 +1,10 @@
+2003-05-27  Matthias Clasen  <maclas@gmx.de>
+
+	* gtkdoc-mkdb.in (GetSignals): 
+	(GetArgs): Add signals and properties to the statistics.
+	(OutputMissingDocumentation): Emit undocumented signals and
+	properties.  (#113645)
+
 2003-04-21  Matthias Clasen  <maclas@gmx.de>
 
 	* tools/docpercentages.pl: Fix autolinkification for undocumented
